# rhino_six_dof_arm

./: CMakeLists.txt  README.md  package.xml
config/: rhino_controller.yaml
launch/: display.launch.py  gazebo.launch.py  rhino_controller.launch.py  rsp.launch.py
meshes/: link2.stl  link3.stl  link6b.stl
rhino/: package.xml  setup.cfg  setup.py
rhino/config/: rhino_controller.yaml
rhino/launch/: display.launch.py  gazebo.launch.py  rhino_controller.launch.py  rsp.launch.py
rhino/meshes/: base_link.stl  link5.stl  link6a.stl
rhino/resource/: joint_limits.txt
rhino/rhino/: color_detector.py  feedback_test.py  ikpy_testor.py  joint_testor.py  task1.py  task2.py
rhino/urdf/: camera.xacro  robot.gazebo  robot.xacro.urdf  ros2_control.xacro
rhino/worlds/: bowl_object  world1
rhino_sim/rhino_bringup/: package.xml  setup.cfg  setup.py
rhino_sim/rhino_bringup/launch/: gz_ros2_control.launch.py  gz_sim.launch.py  rhino_sdf.launch.py
rhino_sim/rhino_bringup/rhino_bringup/: feedback_test.py  ikpy_test.py  position_test.py  task1.py  task2.py
rhino_sim/rhino_description/: CMakeLists.txt  package.xml
rhino_sim/rhino_description/description/models/long_object/: model.config  model.sdf
rhino_sim/rhino_description/description/models/long_object/meshes/: long_object.stl
rhino_sim/rhino_description/description/models/med_object/: model.config  model.sdf
rhino_sim/rhino_description/description/models/med_object/meshes/: med_object.stl
rhino_sim/rhino_description/description/models/rhino/: model.config  model.sdf
rhino_sim/rhino_description/description/models/rhino/meshes/: link1.stl  link4.stl  link5.stl
rhino_sim/rhino_description/description/models/small_object/: model.config  model.sdf
rhino_sim/rhino_description/description/urdf/: gz_ros2_control.xacro  robot.urdf
rhino_sim/rhino_description/launch/: display.launch.py  object.launch.py  rsp.launch.py
rhino_sim/rhino_description/resource/: joint_limits.txt
rhino_sim/rhino_description/worlds/: long_object.sdf  med_object.sdf  small_object.sdf
src/: control_test.py
urdf/: robot.gazebo  robot.trans  robot.xacro  ros2_control.xacro
