<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rhino_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="reishabhrathore2003@gmail.com">reishabh</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build and exec dependencies -->
  <exec_depend>python3</exec_depend>
  <exec_depend>ikpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
